// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input/ino-form-row Mandatory smoke-test 1`] = `
<div id="root-inner">
  <div class>
    <ino-form-row class="customizable-form-row"
                  label="Label"
                  mandatory="true"
    >
      <ino-input>
      </ino-input>
    </ino-form-row>
  </div>
</div>
`;

exports[`Input/ino-form-row Playground smoke-test 1`] = `
<div id="root-inner">
  <div class>
    <ino-form-row class="customizable-form-row"
                  label="Label"
                  mandatory="false"
    >
      <ino-input>
      </ino-input>
    </ino-form-row>
  </div>
</div>
`;
